# unpaired

./: Cargo.toml
src/: app.rs  file_index.rs  fs_tree.rs  lib.rs  main.rs  utils.rs
src/app/: components.rs  file_list_widget.rs  fs_tree_panel.rs
src/app/components/: fs_tree_panel.rs  same_nodes_panel.rs
src/fs_tree/: fiemap.rs  index.rs  nodes.rs  serde_impl.rs  utils.rs
