[package]
name = "rdupl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
nix = { version = "0.31.1", features = ["ioctl"] }
postcard = { version = "1.1.3", features = ["use-std"] }
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
